--- a/FarmaciaPedidos/FarmaciaPedidos.csproj
+++ b/FarmaciaPedidos/FarmaciaPedidos.csproj
@@ -58,11 +58,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\ResumenPedido.cs">
+    <Compile Include="Views\ResumenPedidoForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\ResumenPedido.Designer.cs">
-      <DependentUpon>ResumenPedido.cs</DependentUpon>
+    <Compile Include="Views\ResumenPedidoForm.Designer.cs">
+      <DependentUpon>ResumenPedidoForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -76,8 +76,8 @@
     <EmbeddedResource Include="Views\FormularioPedido.resx">
       <DependentUpon>FormularioPedido.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\ResumenPedido.resx">
-      <DependentUpon>ResumenPedido.cs</DependentUpon>
+    <EmbeddedResource Include="Views\ResumenPedidoForm.resx">
+      <DependentUpon>ResumenPedidoForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
